<resources>
    <string name="app_name">Placemark</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="button_savePlacemark">Save Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Placemark Description</string>
    <string name="placemarkDescription">Placemark Description</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="warning_missingTitle">"Please Enter a title"</string>
    <string name="button_addImage"> Select image </string>
    <string name="button_changeImage"> Change image </string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_deletePlacemark">Delete</string>
    <string name="title_activity_placemark_maps">Map of All Placemarks </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>